# mlfp

./: .gitattributes  .gitignore  .session-notes  CHANGELOG.md  CLAUDE.md  NOTEBOOK-SMOKE-2026-04-28.md  README-student.md  README.md  STUDENT-REPO.md  SWEEP-2026-04-28.md  downstream.yaml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
.claude/: .coc-obsoleted  .coc-sync-marker  VERSION  settings.json
.claude/agents/: cc-architect.md  cli-orchestrator.md
.claude/commands/: ai.md  cc-audit.md  cli-audit.md  codify.md  db.md  decisive.md  release.md  start.md  sweep.md  sync.md  test.md  wrapup.md
.claude/hooks/: session-start.js  validate-workflow.js
.claude/learning/: identity.json  learning-codified.json  learning-digest.json  observations.jsonl
.claude/rules/: agents.md  artifact-flow.md  autonomous-execution.md  build-repo-release-discipline.md  cc-artifacts.md  ci-runners.md  cross-cli-parity.md  cross-sdk-inspection.md  dataflow-classification.md  dataflow-identifier-safety.md  dependencies.md  deploy-hygiene.md  deployment.md  documentation.md  domain-integrity.md  eatp.md  event-payload-classification.md  exercise-standards.md  framework-first.md  git.md  independence.md  nexus-http-status-convention.md  nexus-webhook-hmac.md  observability.md  orphan-detection.md  patterns.md  schema-migration.md  security.md  specs-authority.md  tenant-isolation.md  testing.md  three-format.md  two-format.md  worktree-isolation.md  zero-tolerance.md
.playwright-mcp/: page-2026-04-12T19-56-02-981Z.yml  page-2026-04-12T19-56-40-940Z.yml  page-2026-04-13T01-26-48-473Z.yml  page-2026-04-13T01-27-20-752Z.yml  page-2026-04-13T05-12-55-413Z.yml  page-2026-04-13T05-13-07-817Z.yml  page-2026-04-13T05-13-19-602Z.yml  page-2026-04-13T05-51-42-938Z.yml  page-2026-04-13T05-52-01-372Z.yml  page-2026-04-13T05-52-08-619Z.yml  page-2026-04-13T05-52-15-221Z.yml  page-2026-04-13T05-52-21-959Z.yml  page-2026-04-13T05-52-30-664Z.yml  page-2026-04-13T05-52-38-367Z.yml  page-2026-04-13T05-52-46-247Z.yml  page-2026-04-13T05-52-52-945Z.yml  page-2026-04-13T05-53-01-442Z.yml  page-2026-04-13T05-53-09-400Z.yml  page-2026-04-13T05-53-16-309Z.yml  page-2026-04-13T05-53-25-615Z.yml  page-2026-04-13T05-53-33-306Z.yml  page-2026-04-13T05-53-44-204Z.yml  page-2026-04-13T05-53-59-104Z.yml  page-2026-04-13T05-54-09-851Z.yml  page-2026-04-13T06-04-29-848Z.yml  page-2026-04-13T06-04-41-975Z.yml  page-2026-04-13T06-05-05-828Z.yml  page-2026-04-13T06-05-57-216Z.yml  page-2026-04-13T06-06-14-523Z.yml  page-2026-04-13T06-06-26-614Z.yml  page-2026-04-13T06-07-23-135Z.yml  page-2026-04-13T06-07-34-049Z.yml  page-2026-04-13T06-09-11-328Z.yml  page-2026-04-13T06-09-22-547Z.yml  page-2026-04-13T06-09-35-583Z.yml
.staging/: m1_old_ex_1.py  m1_old_ex_2.py  m1_old_ex_3.py  m1_old_ex_5.py  m2_old_ex_1.py  m2_old_ex_2.py  m2_old_ex_4.py  m3_old_ex_1.py  m3_old_ex_4.py  m3_old_ex_5.py  m4_old_ex_1.py  m4_old_ex_2.py  m4_old_ex_4.py  m5_old_ex_2.py  m5_old_ex_3.py  m5_old_ex_4.py  m6_old_ex_1.py  m6_old_ex_6.py
data/ascent01/: sg_weather.csv
data/ascent05/: documents.parquet
data/ascent06/: preference_pairs.parquet  sg_domain_qa.parquet
data/pcml1/: economic_indicators.csv  sg_taxi_trips.csv
data/pcml2/: experiment_data.parquet
data/pcml3/: sg_credit_scoring.parquet
data/pcml4/: ecommerce_customers.parquet
data/pcml5/: documents.parquet
data/pcml6/: preference_pairs.parquet  sg_domain_qa.parquet
decks/: README.md  pcml1_1.md  pcml1_2.md  pcml1_3.md  pcml1_4.md  pcml1_5.md  pcml1_6.md  pcml1_7.md  pcml1_8.md  pcml2_1.md  pcml2_2.md  pcml2_3.md  pcml2_4.md  pcml2_5.md  pcml2_6.md  pcml2_7.md  pcml2_8.md  pcml3_1.md  pcml3_2.md  pcml3_3.md  pcml3_4.md  pcml3_5.md  pcml3_6.md  pcml3_7.md  pcml3_8.md  pcml4_1.md  pcml4_2.md  pcml4_3.md  pcml4_4.md  pcml4_5.md  pcml4_6.md  pcml4_7.md  pcml4_8.md  pcml5_1.md  pcml5_2.md  pcml5_3.md  pcml5_4.md  pcml5_5.md  pcml5_6.md  pcml5_7.md  (+9 more)
decks/ascent01/: deck.html  speaker-notes.md
decks/ascent02/: deck.html
decks/ascent03/: deck.html  speaker-notes.md
decks/ascent04/: deck.html  speaker-notes.md
decks/ascent05/: deck.html
decks/ascent06/: deck.html
decks/ascent07/: deck.html  speaker-notes.md
decks/ascent08/: deck.html  speaker-notes.md
decks/ascent09/: deck.html  speaker-notes.md
decks/ascent10/: deck.html  speaker-notes.md
decks/mlfp01/: deck.html  index.html  speaker-notes.md
decks/mlfp02/: deck.html  textbook.md
decks/mlfp03/: deck.html  index.html  part_b_deck.html  speaker-notes.md  textbook.md
decks/mlfp04/: deck.html  speaker-notes.md
decks/mlfp05/: deck.html  index.html  part_b_deck.html  part_b_speaker-notes.md  speaker-notes.md
decks/mlfp06/: deck.html  part_b_deck.html  part_b_speaker-notes.md  speaker-notes.md  textbook.md
decks/pcml1/: deck.html  speaker-notes.md
decks/pcml2/: deck.html  speaker-notes.md
decks/pcml3/: deck.html
decks/pcml4/: deck.html
decks/pcml5/: deck.html  speaker-notes.md
decks/pcml6/: deck.html
docs/: course-outline.md  polars-cheatsheet.md  setup-guide.md
docs/assessment/: capstone-guidelines.md  capstone-rubric.md  model-card-template.md  peer-review-rubric.md  (+2 more)
scripts/: build-student-repo.sh  check-deck-overflow.js  check-deck-parity.sh  check_notebook_syntax.py  deck-audit.mjs  fetch-real-data.py  generate-pdfs-v2.sh  generate-pdfs.sh  generate_datasets.py  generate_selfcontained_notebook.py  py_to_notebook.py  redline-check.py
shared/: __init__.py  colab_setup.py  data_loader.py  kailash_helpers.py
specs/: _index.md  ascent-additions.md  design-principles.md  exercise-mapping.md  m6-diagnostics-design.md  module-1.md  module-2.md  module-3.md  module-4.md  module-5.md  module-6.md  r5-mapping.md  redlines.md  redteam-resolutions.md  sdk-coverage.md
tests/: conftest.py
textbook/: PARITY.md  README.md
textbook/rust/00-core/: Cargo.toml
textbook/rust/01-dataflow/: Cargo.toml
textbook/rust/02-nexus/: Cargo.toml
textbook/rust/03-kaizen/: Cargo.toml
textbook/rust/05-ml/: Cargo.toml
textbook/rust/06-pact/: Cargo.toml
textbook/rust/07-align/: Cargo.toml
(+2621 files in other folders)
