[package]
name = "tutorial-nexus"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
kailash-nexus = { path = "../../../../../loom/kailash-rs/crates/kailash-nexus" }
kailash-core = { path = "../../../../../loom/kailash-rs/crates/kailash-core" }
kailash-value = { path = "../../../../../loom/kailash-rs/crates/kailash-value" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
