[package]
name = "tutorial-kaizen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
kailash-kaizen = { path = "../../../../../loom/kailash-rs/crates/kailash-kaizen" }
kailash-value = { path = "../../../../../loom/kailash-rs/crates/kailash-value" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
