[package]
name = "tutorial-ml"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
kailash-ml = { path = "../../../../../loom/kailash-rs/crates/kailash-ml", features = ["linear", "tree", "ensemble", "preprocessing", "metrics", "pipeline", "selection", "boost", "svm", "neighbors", "cluster", "decomposition", "text", "misc", "explorer"] }
kailash-ml-core = { path = "../../../../../loom/kailash-rs/crates/kailash-ml-core" }
kailash-ml-linalg = { path = "../../../../../loom/kailash-rs/crates/kailash-ml-linalg" }
ndarray = { version = "0.16", features = ["serde"] }
serde_json = "1"
