[package]
name = "tutorial-pact"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
kailash-pact = { path = "../../../../../loom/kailash-rs/crates/kailash-pact" }
kailash-governance = { path = "../../../../../loom/kailash-rs/crates/kailash-governance" }
serde_json = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
